test/objects/Profile__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>( TODAY() - DOB__c)/365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birth_Time__c</fullName>
        <label>Birth Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Blood_Group__c</fullName>
        <label>Blood Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>A-</fullName>
                </value>
                <value>
                    <fullName>B+</fullName>
                </value>
                <value>
                    <fullName>B-</fullName>
                </value>
                <value>
                    <fullName>AB+</fullName>
                </value>
                <value>
                    <fullName>AB-</fullName>
                </value>
                <value>
                    <fullName>O+</fullName>
                </value>
                <value>
                    <fullName>O-</fullName>
                </value>
                <value>
                    <fullName>Not Disclosed</fullName>
                    <default>true</default>
                    <label>Not Disclosed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Body_Type__c</fullName>
        <label>Body Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Athletic</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Heavy</fullName>
                </value>
                <value>
                    <fullName>Slim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Challenges__c</fullName>
        <label>Challenges</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Physically from Birth</fullName>
                </value>
                <value>
                    <fullName>Physically due to an Accident</fullName>
                </value>
                <value>
                    <fullName>Mentally from Birth</fullName>
                </value>
                <value>
                    <fullName>Mentally due to an Accident</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>College_University_Name__c</fullName>
        <label>College/University Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Mother_Tounge__c</fullName>
        <inlineHelpText>Please mention the native language that best represents your family background</inlineHelpText>
        <label>Mother Tongue</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name_current__c</fullName>
        <label>Company Name(Current)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Profiles</relationshipLabel>
        <relationshipName>Profiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Does_He_She_They_have_children__c</fullName>
        <label>Does He/She/They have children?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes - Living Together</fullName>
                </value>
                <value>
                    <fullName>Yes - Not Living together</fullName>
                    <label>Yes - Not Living Together</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drinks__c</fullName>
        <label>Alcohol</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Family_Lives_In__c</fullName>
        <label>Family Lives In</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>Family_Status__c</fullName>
        <label>Family Economical Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Middle Class</fullName>
                </value>
                <value>
                    <fullName>Upper Class</fullName>
                </value>
                <value>
                    <fullName>Rich/Affluent</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                    <isActive>false</isActive>
                    <label>Poor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_Type__c</fullName>
        <label>Family Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nuclear Family</fullName>
                </value>
                <value>
                    <fullName>Joint Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Father_Status__c</fullName>
        <label>Father&apos;s Occupation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Occupation_Status_Value</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Favourite_Criuisne__c</fullName>
        <label>Favourite Cuisine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Favourite_Music__c</fullName>
        <label>Favourite Music</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Favourite_Read__c</fullName>
        <label>Favourite Read</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender_Value</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Height_Value</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highest_Qualification__c</fullName>
        <label>Highest Qualification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Associates Degree</fullName>
                </value>
                <value>
                    <fullName>Bachelors</fullName>
                </value>
                <value>
                    <fullName>Diploma</fullName>
                </value>
                <value>
                    <fullName>Doctorate</fullName>
                </value>
                <value>
                    <fullName>Engineering/Technology</fullName>
                </value>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Honours Degree</fullName>
                </value>
                <value>
                    <fullName>Less than high school</fullName>
                </value>
                <value>
                    <fullName>Masters</fullName>
                </value>
                <value>
                    <fullName>Post Graduation</fullName>
                </value>
                <value>
                    <fullName>Trade School</fullName>
                </value>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <label>Hobbies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_yearly__c</fullName>
        <label>Income (Annually)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lives_In__c</fullName>
        <label>Lives In</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>Living_with_Family__c</fullName>
        <label>Living with Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unmarried</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
                <value>
                    <fullName>Awaiting Divorce</fullName>
                </value>
                <value>
                    <fullName>Annulled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mother_Status__c</fullName>
        <label>Mother&apos;s Occupation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Occupation_Status_Value</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Brothers__c</fullName>
        <label>No of Brothers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Children__c</fullName>
        <label>No of Children</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Does_He_She_They_have_children__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>more than 5</fullName>
                    <label>More than 5</label>
                </value>
                <value>
                    <fullName>0</fullName>
                    <isActive>false</isActive>
                    <label>0</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Married_Sisters__c</fullName>
        <label>No of Married Sisters</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Sisters__c</fullName>
        <label>No of Sisters</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Married_Brother__c</fullName>
        <label>No of Married Brothers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opposite_Gender__c</fullName>
        <label>Looking for Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender_Value</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Religion__c</fullName>
        <label>Other Religion</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_of_Birth__c</fullName>
        <label>Place of Birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Dress_Style__c</fullName>
        <label>Preferred Dress Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Movies__c</fullName>
        <label>Preferred Movies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Area__c</fullName>
        <inlineHelpText>Enter profession name like Software Developer</inlineHelpText>
        <label>Profession</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileURL__c</fullName>
        <formula>&apos;https://matchmakercrm-dev-ed.my.salesforce-sites.com/?id=&apos;+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProfileURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Religion__c</fullName>
        <label>Religion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buddhist</fullName>
                </value>
                <value>
                    <fullName>Christian</fullName>
                </value>
                <value>
                    <fullName>Hindu</fullName>
                </value>
                <value>
                    <fullName>Jain</fullName>
                </value>
                <value>
                    <fullName>Jewish</fullName>
                </value>
                <value>
                    <fullName>Muslim</fullName>
                </value>
                <value>
                    <fullName>Parsi</fullName>
                </value>
                <value>
                    <fullName>Sikh</fullName>
                </value>
                <value>
                    <fullName>Spiritual</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>No Religion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sexuality__c</fullName>
        <label>Sexuality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asexual</fullName>
                </value>
                <value>
                    <fullName>Bisexual</fullName>
                </value>
                <value>
                    <fullName>Heterosexual</fullName>
                </value>
                <value>
                    <fullName>Homosexual</fullName>
                </value>
                <value>
                    <fullName>Pansexual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skin_Tone_C__c</fullName>
        <label>Skin Tone/Complexion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Light Neutral</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Wheatish</fullName>
                </value>
                <value>
                    <fullName>Exotic</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Dark Brown</fullName>
                </value>
                <value>
                    <fullName>Toffee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Smoke__c</fullName>
        <label>Does Smoke?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sport_Fitness_Activities__c</fullName>
        <label>Sport/Fitness Activities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Profile Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Profile</fullName>
                    <default>true</default>
                    <label>New Profile</label>
                </value>
                <value>
                    <fullName>Request for Completion</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Religion__c</fullName>
        <label>Sub Religion</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30kg to 35kg</fullName>
                </value>
                <value>
                    <fullName>36kg to 40kg</fullName>
                </value>
                <value>
                    <fullName>41kg to 45kg</fullName>
                </value>
                <value>
                    <fullName>46kg to 50kg</fullName>
                </value>
                <value>
                    <fullName>51kg to 55kg</fullName>
                </value>
                <value>
                    <fullName>56kg to 60kg</fullName>
                </value>
                <value>
                    <fullName>61kg to 65kg</fullName>
                </value>
                <value>
                    <fullName>66kg to 70kg</fullName>
                </value>
                <value>
                    <fullName>71kg to 75kg</fullName>
                </value>
                <value>
                    <fullName>76kg to 80kg</fullName>
                </value>
                <value>
                    <fullName>81kg to 85kg</fullName>
                </value>
                <value>
                    <fullName>86kg to 90kg</fullName>
                </value>
                <value>
                    <fullName>91kg to 95kg</fullName>
                </value>
                <value>
                    <fullName>96kg to 100kg</fullName>
                </value>
                <value>
                    <fullName>101kg to 105kg</fullName>
                </value>
                <value>
                    <fullName>106kg to 110kg</fullName>
                </value>
                <value>
                    <fullName>111kg to 115kg</fullName>
                </value>
                <value>
                    <fullName>116kg to 120kg</fullName>
                </value>
                <value>
                    <fullName>121kg to 125kg</fullName>
                </value>
                <value>
                    <fullName>126kg to 130kg</fullName>
                </value>
                <value>
                    <fullName>131kg to 135kg</fullName>
                </value>
                <value>
                    <fullName>136kg to 140kg</fullName>
                </value>
                <value>
                    <fullName>141kg to 145kg</fullName>
                </value>
                <value>
                    <fullName>146kg to 150kg</fullName>
                </value>
                <value>
                    <fullName>More than 150kg</fullName>
                </value>
                <value>
                    <fullName>Not Disclosed</fullName>
                    <default>true</default>
                    <label>Not Disclosed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Working_with__c</fullName>
        <label>Working with</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private Company</fullName>
                </value>
                <value>
                    <fullName>Government/Public Sector</fullName>
                </value>
                <value>
                    <fullName>Defence/Civil Sector</fullName>
                </value>
                <value>
                    <fullName>Business/ Self Employed</fullName>
                </value>
                <value>
                    <fullName>Not Working</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Your_Diet__c</fullName>
        <label>Diet</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eggetarian</fullName>
                </value>
                <value>
                    <fullName>Non-Veg</fullName>
                </value>
                <value>
                    <fullName>Occasionally Non-Veg</fullName>
                </value>
                <value>
                    <fullName>vegetarian</fullName>
                    <label>Vegetarian</label>
                </value>
                <value>
                    <fullName>Vegan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zodiac__c</fullName>
        <label>Zodiac</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aries/Mesh</fullName>
                </value>
                <value>
                    <fullName>Taurus/Vrishabh</fullName>
                </value>
                <value>
                    <fullName>Gemini/Mithuna</fullName>
                </value>
                <value>
                    <fullName>Cancer/Karka</fullName>
                </value>
                <value>
                    <fullName>Leo/Simha</fullName>
                </value>
                <value>
                    <fullName>Virgo/Kanya</fullName>
                </value>
                <value>
                    <fullName>Libra/Tula</fullName>
                </value>
                <value>
                    <fullName>Scorpio/Vrishchik</fullName>
                </value>
                <value>
                    <fullName>Sagittarius/Dhanu</fullName>
                </value>
                <value>
                    <fullName>Capricorn/Makar</fullName>
                </value>
                <value>
                    <fullName>Aquarius/Kumbha</fullName>
                </value>
                <value>
                    <fullName>Pisces/Meena</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Profile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Age__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile__c</columns>
        <columns>Active__c</columns>
        <columns>Contact__c</columns>
        <columns>Income_yearly__c</columns>
        <columns>Highest_Qualification__c</columns>
        <columns>Religion__c</columns>
        <columns>Zodiac__c</columns>
        <columns>Marital_Status__c</columns>
        <columns>Height__c</columns>
        <columns>Opposite_Gender__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Gender__c</field>
            <operation>equals</operation>
            <value>Male</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Religion__c</field>
            <operation>equals</operation>
            <value>Hindu</value>
        </filters>
        <filters>
            <field>Income_yearly__c</field>
            <operation>greaterOrEqual</operation>
            <value>15000</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Brothers</fullName>
        <active>true</active>
        <errorConditionFormula>No_of_Brothers__c  &lt;  Number_of_Married_Brother__c</errorConditionFormula>
        <errorDisplayField>No_of_Brothers__c</errorDisplayField>
        <errorMessage>No. of Brothers must be greater than no. of married brothers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DOB</fullName>
        <active>true</active>
        <errorConditionFormula>YEAR(TODAY()) - YEAR( DOB__c) &lt; 16</errorConditionFormula>
        <errorDisplayField>DOB__c</errorDisplayField>
        <errorMessage>Minimum age should be 16 yrs</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(Mobile__c, &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
        <errorDisplayField>Mobile__c</errorDisplayField>
        <errorMessage>Enter Valid Phone Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Religion</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   ISPICKVAL( Religion__c , &quot;Others&quot;),
   ISBLANK( Other_Religion__c )
)</errorConditionFormula>
        <errorDisplayField>Other_Religion__c</errorDisplayField>
        <errorMessage>Enter Other Religion Text Field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sister</fullName>
        <active>true</active>
        <errorConditionFormula>No_of_Sisters__c  &lt;  No_of_Married_Sisters__c</errorConditionFormula>
        <errorMessage>No. of Sister must great than no. of Married Sister</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>children</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(Does_He_She_They_have_children__c, &apos;Yes - Living Together&apos;) ||
ISPICKVAL(Does_He_She_They_have_children__c, &apos;Yes - Not Living together&apos;)) &amp;&amp; (ISPICKVAL( No_of_Children__c ,&apos;&apos;))</errorConditionFormula>
        <errorDisplayField>No_of_Children__c</errorDisplayField>
        <errorMessage>Enter Number of Children</errorMessage>
    </validationRules>
</CustomObject>